feat: fixed login for broken sessions

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -149,3 +149,4 @@ button {
 @import "./pages/login.scss";
 @import "./pages/dashboard.scss";
 @import "./pages/files.scss";
+@import "./pages/error.scss";
