feat: added modal

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -145,6 +145,7 @@ button {
 }
 
 @import "./components/navbar.scss";
+@import "./components/modal.scss";
 
 @import "./pages/login.scss";
 @import "./pages/dashboard.scss";
