--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -1,5 +1,5 @@
 .modal-backdrop {
-	position: absolute;
+	position: fixed;
 	z-index: 1000;
 	top: 0;
 	left: 0;
@@ -9,6 +9,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	overflow-y: hidden;
 }
 
 .modal {
