--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -146,6 +146,7 @@ button {
 
 @import "./components/navbar.scss";
 @import "./components/modal.scss";
+@import "./components/editComponent.scss";
 
 @import "./pages/login.scss";
 @import "./pages/dashboard.scss";
