feat(Dashboard): added delete confirmation

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -147,6 +147,7 @@ button {
 @import "./components/navbar.scss";
 @import "./components/modal.scss";
 @import "./components/editComponent.scss";
+@import "./components/confirmModal.scss";
 
 @import "./pages/login.scss";
 @import "./pages/dashboard.scss";
