--- a/src/styles/components/editComponent.scss
+++ b/src/styles/components/editComponent.scss
@@ -7,6 +7,7 @@
 
 	display: grid;
 	place-items: center;
+	text-align: center;
 
 	> i {
 		position: absolute;
@@ -29,6 +30,7 @@
 	align-items: center;
 	flex-direction: column;
 	width: 50%;
+	text-align: center;
 
 	p {
 		font-size: 2rem;
