feat(Upload): file upload added

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -153,3 +153,4 @@ button {
 @import "./pages/dashboard.scss";
 @import "./pages/files.scss";
 @import "./pages/error.scss";
+@import "./pages/upload.scss";
