feat: added Settings page

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -154,3 +154,4 @@ button {
 @import "./pages/files.scss";
 @import "./pages/error.scss";
 @import "./pages/upload.scss";
+@import "./pages/settings.scss";
