fix: colour vars not usable

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* --vars-- */
-html.dark-theme {
+html {
 	--main: #2c39a6;
 	--alt: #7344e2;
 	--bg1: #05070f;
