--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -76,6 +76,52 @@ main {
 	padding-top: 100px;
 }
 
+input,
+textarea {
+	outline: none;
+	padding: 10px;
+
+	border-radius: 4px;
+	border-width: 1px;
+	border-color: rgba(var(--white-rgb), 0.2);
+	border-style: solid;
+
+	background-color: #14161a;
+	transition: border-color 0.5s ease;
+
+	resize: vertical;
+
+	&:hover {
+		border-color: rgba(var(--white-rgb), 0.6);
+	}
+
+	&:focus {
+		border-color: var(--blurple);
+	}
+}
+
+table {
+	border-collapse: collapse;
+	width: 100%;
+}
+
+th,
+td {
+	border: 1px solid rgba(var(--white-rgb), 0.2);
+	text-align: left;
+	padding: 8px;
+	font-size: 1.5rem;
+}
+
+th {
+	background-color: rgba(var(--bg3-rgb), 0.5);
+}
+
+td {
+	background-color: rgba(var(--bg3-rgb), 0.2);
+	color: rgba(var(--white-rgb), 0.6);
+}
+
 /* == Tippy Theme */
 @font-face {
 	font-family: "Discord Font";
