--- a/src/styles/components/dashboard/table.scss
+++ b/src/styles/components/dashboard/table.scss
@@ -240,3 +240,140 @@
 	overflow-x: auto;
 	width: 100%;
 }
+
+.confirm-buttons button {
+	cursor: pointer;
+	padding: 10px;
+
+	font-size: 1.2rem;
+
+	&.cancel {
+		border: 1px solid $blurple;
+		border-right: unset;
+		color: $blurple;
+		border-radius: 5px 0 0 5px;
+		transition: all 0.5s ease;
+
+		&:hover {
+			color: $white;
+			background-color: $blurple;
+		}
+	}
+
+	&.delete {
+		border: 1px solid $red;
+		border-left: unset;
+		color: $red;
+		border-radius: 0 5px 5px 0;
+		transition: all 0.5s ease;
+
+		&:hover {
+			color: $white;
+			background-color: $red;
+		}
+	}
+}
+
+.edit-wrapper {
+	width: 100%;
+	height: 100%;
+	background-color: $bg1;
+	border: 2px solid $border;
+	border-radius: 5px;
+
+	display: grid;
+	place-items: center;
+	text-align: center;
+
+	> i {
+		position: absolute;
+		top: 10px;
+		right: calc(2rem + 10px);
+
+		color: rgba($white, 0.3);
+		transition: all 0.5s ease;
+		cursor: pointer;
+
+		&:hover {
+			color: $white;
+		}
+	}
+}
+
+.edit-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	width: 50%;
+	text-align: center;
+
+	p {
+		font-size: 2rem;
+		font-weight: 500;
+	}
+
+	span {
+		font-size: 1.2rem;
+		color: $red;
+	}
+
+	button {
+		font-size: 1.2rem;
+		margin-top: 1rem;
+		border: 1px solid $green;
+		padding: 5px;
+		border-radius: 5px;
+		cursor: pointer;
+		color: $green;
+		transition: all 0.5s ease;
+
+		&:hover {
+			background-color: $green;
+			color: $white;
+		}
+
+		&:disabled {
+			color: rgba($green, 0.1);
+			border-color: rgba($green, 0.1);
+			cursor: not-allowed;
+
+			&:hover {
+				color: rgba($green, 0.1) !important;
+				border-color: rgba($green, 0.1) !important;
+				background-color: unset !important;
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.edit-wrapper.confirmation {
+		h2 {
+			font-size: 1.5rem;
+			padding: 5px;
+		}
+	}
+	.confirm-buttons {
+		width: 80%;
+
+		button {
+			font-size: 1.2rem;
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+
+			&.cancel {
+				border: 1px solid $blurple;
+				border-bottom: unset;
+				border-radius: 5px 5px 0 0;
+			}
+
+			&.delete {
+				border: 1px solid $red;
+				border-top: unset;
+				border-radius: 0 0 5px 5px;
+			}
+		}
+	}
+}
