--- a/src/styles/components/dashboard/table.scss
+++ b/src/styles/components/dashboard/table.scss
@@ -248,28 +248,28 @@
 	font-size: 1.2rem;
 
 	&.cancel {
-		border: 1px solid $blurple;
+		border: 1px solid var(--blurple);
 		border-right: unset;
-		color: $blurple;
+		color: var(--blurple);
 		border-radius: 5px 0 0 5px;
 		transition: all 0.5s ease;
 
 		&:hover {
-			color: $white;
-			background-color: $blurple;
+			color: var(--white);
+			background-color: var(--blurple);
 		}
 	}
 
 	&.delete {
-		border: 1px solid $red;
+		border: 1px solid var(--white);
 		border-left: unset;
-		color: $red;
+		color: var(--white);
 		border-radius: 0 5px 5px 0;
 		transition: all 0.5s ease;
 
 		&:hover {
-			color: $white;
-			background-color: $red;
+			color: var(--white);
+			background-color: var(--white);
 		}
 	}
 }
@@ -277,8 +277,8 @@
 .edit-wrapper {
 	width: 100%;
 	height: 100%;
-	background-color: $bg1;
-	border: 2px solid $border;
+	background-color: var(--bg1);
+	border: 2px solid var(--bg2-border);
 	border-radius: 5px;
 
 	display: grid;
@@ -290,12 +290,12 @@
 		top: 10px;
 		right: calc(2rem + 10px);
 
-		color: rgba($white, 0.3);
+		color: rgba(var(--white), 0.3);
 		transition: all 0.5s ease;
 		cursor: pointer;
 
 		&:hover {
-			color: $white;
+			color: var(--white);
 		}
 	}
 }
@@ -315,32 +315,32 @@
 
 	span {
 		font-size: 1.2rem;
-		color: $red;
+		color: var(--white);
 	}
 
 	button {
 		font-size: 1.2rem;
 		margin-top: 1rem;
-		border: 1px solid $green;
+		border: 1px solid var(--green);
 		padding: 5px;
 		border-radius: 5px;
 		cursor: pointer;
-		color: $green;
+		color: var(--green);
 		transition: all 0.5s ease;
 
 		&:hover {
-			background-color: $green;
-			color: $white;
+			background-color: var(--green);
+			color: var(--white);
 		}
 
 		&:disabled {
-			color: rgba($green, 0.1);
-			border-color: rgba($green, 0.1);
+			color: rgba(var(--green-rgb), 0.1);
+			border-color: rgba(var(--green-rgb), 0.1);
 			cursor: not-allowed;
 
 			&:hover {
-				color: rgba($green, 0.1) !important;
-				border-color: rgba($green, 0.1) !important;
+				color: rgba(var(--green-rgb), 0.1) !important;
+				border-color: rgba(var(--green-rgb), 0.1) !important;
 				background-color: unset !important;
 			}
 		}
@@ -364,13 +364,13 @@
 			width: 100%;
 
 			&.cancel {
-				border: 1px solid $blurple;
+				border: 1px solid var(--blurple);
 				border-bottom: unset;
 				border-radius: 5px 5px 0 0;
 			}
 
 			&.delete {
-				border: 1px solid $red;
+				border: 1px solid var(--white);
 				border-top: unset;
 				border-radius: 0 0 5px 5px;
 			}
