feat: change green colour

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,7 +16,7 @@ html {
 	--white: #fff;
 	--black: #272727;
 	--gray: #555555;
-	--green: #07db3c;
+	--green: #77b300;
 	--red: #ff4141;
 	--orange: #ff9800;
 	--blurple: #5865f2;
@@ -34,7 +34,7 @@ html {
 	--white-rgb: 255, 255, 255;
 	--black-rgb: 39, 39, 39;
 	--gray-rgb: 85, 85, 85;
-	--green-rgb: 7, 219, 60;
+	--green-rgb: 119, 179, 0;
 	--red-rgb: 255, 65, 65;
 	--orange-rgb: 255, 152, 0;
 	--blurple-rgb: 88, 101, 242;
