--- a/src/styles/pages/settings.scss
+++ b/src/styles/pages/settings.scss
@@ -13,7 +13,7 @@
 .settings-container {
 	background-color: var(--bg2);
 	padding: 1rem;
-	border: 1px solid var(--border);
+	border: 1px solid var(--bg2-border);
 	border-radius: 5px;
 	width: min(90%, 90%, 1000px);
 
