fix: add missing separator class

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -140,7 +140,7 @@ button {
 	width: 100%;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	background-color: $border;
+	background-color: var(--bg2-border);
 }
 
 /* == Tippy Theme */
