--- a/src/styles/components/dashboard/table.scss
+++ b/src/styles/components/dashboard/table.scss
@@ -66,7 +66,7 @@
 		border-bottom-right-radius: 5px;
 		padding: 10px;
 
-		background-color: #14161a;
+		background-color: var(--input);
 		border: 1px solid rgba(var(--white-rgb), 0.2);
 		border-left-color: transparent;
 
