--- a/src/styles/pages/fileviewer.scss
+++ b/src/styles/pages/fileviewer.scss
@@ -20,6 +20,22 @@
 	resize: vertical;
 }
 
+.fileviewer-no-preview {
+	i {
+		margin-right: 10px;
+	}
+
+	a {
+		color: rgba(var(--white-rgb), 0.4);
+		transition: color 0.5s ease;
+		cursor: pointer;
+
+		&:hover {
+			color: rgba(var(--white-rgb), 0.9);
+		}
+	}
+}
+
 @media screen and (max-width: 700px) {
 	.fileviewer-component {
 		width: 100%;
