--- a/src/styles/pages/settings.scss
+++ b/src/styles/pages/settings.scss
@@ -4,9 +4,11 @@
 	justify-content: center;
 	align-items: center;
 
-	h1 {
+	> h1 {
 		font-size: 2.5rem;
 		font-weight: 500;
+
+		text-align: center;
 	}
 }
 
@@ -257,4 +259,23 @@
 
 .edit-container-dropdown {
 	width: 90%;
+}
+
+@media screen and (max-width: 700px) {
+	.embed-settings-container {
+		flex-direction: column;
+	}
+
+	.embed-settings,
+	.embed-settings-discord {
+		width: 100%;
+	}
+
+	.embed-settings {
+		margin-top: 1rem;
+	}
+
+	.discord-embed {
+		margin: unset;
+	}
 }
