--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,12 +1,13 @@
-@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
 @import url("https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 /* --vars-- */
 $white: #fff;
-$gray: #232527;
-$dark: #101010;
-$black: #0a0a0a;
+$page-background: #242526;
+
+$button-black: #1c1d1e;
+$button-black-active: #131415;
 
 * {
 	font-family: "Poppins", sans-serif;
@@ -17,7 +18,7 @@ $black: #0a0a0a;
 }
 
 body {
-	background: rgba($black, 0.94);
+	background: $page-background;
 	min-height: 100vh;
 
 	/* hide scroll bar */
@@ -44,7 +45,7 @@ a {
 @font-face {
 	font-family: "Discord Font";
 	font-weight: 900;
-	src: url("https://daangamesdg.xyz/assets/fonts/discord.woff2") format("woff2");
+	src: url("https://ijskoud.dev/assets/fonts/discord.woff2") format("woff2");
 	font-style: normal;
 }
 
@@ -97,3 +98,7 @@ a {
 		margin-bottom: 8px;
 	}
 }
+
+@import "./pages/home.scss";
+
+@import "./components/buttons.scss";
