feat: add modal

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,8 @@ $button-black-active: #131415;
 $button-blurple: $blurple;
 $button-blurple-active: #333366;
 
+$modal-backdrop: rgba(#000, 0.75);
+
 * {
 	font-family: "Poppins", sans-serif;
 	padding: 0;
