--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,10 +4,19 @@
 
 /* --vars-- */
 $white: #fff;
+$red: #f72a2d;
+$blurple: #6666ff;
+
+$comp-background1: #1c1d1e;
 $page-background: #242526;
 
 $button-black: #1c1d1e;
 $button-black-active: #131415;
+
+$button-blurple: $blurple;
+$button-blurple-active: #333366;
+
+$modal-backdrop: rgba(#000, 0.75);
 
 * {
 	font-family: "Poppins", sans-serif;
@@ -28,6 +37,21 @@ body {
 	/* Hide scrollbar for Chrome, Safari and Opera */
 	&::-webkit-scrollbar {
 		display: none;
+	}
+}
+
+input {
+	background: $comp-background1;
+	border: 1px solid $white;
+	border-radius: 5px;
+
+	transition: border 0.5s ease;
+	padding: 10px;
+
+	&:focus-visible,
+	&:hover {
+		border: 1px solid $blurple;
+		outline: none;
 	}
 }
 
@@ -100,5 +124,6 @@ a {
 }
 
 @import "./pages/home.scss";
+@import "./pages/login.scss";
 
 @import "./components/buttons.scss";
