feat(Navbar): add navbar content

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,8 @@ $red: #f72a2d;
 $blurple: #6666ff;
 
 $comp-background1: #1c1d1e;
+$comp-background2: #18191a;
+
 $page-background: #242526;
 $navbar-background: #1e1f21;
 
