--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -1,3 +1,36 @@
+/* === NAVBAR: MENU BUTTON === */
+.navbar-menu-button {
+	border: none;
+	background: none;
+
+	cursor: pointer;
+
+	&.enabled > div.navbar-menu-button-bar {
+		&:nth-of-type(1) {
+			transform: translateY(10px) rotate(45deg);
+		}
+		&:nth-of-type(2) {
+			opacity: 0;
+		}
+		&:nth-of-type(3) {
+			transform: translateY(-10px) rotate(-45deg);
+		}
+	}
+}
+
+.navbar-menu-button-bar {
+	height: 4px;
+	width: 35px;
+	display: block;
+	margin: 6px auto;
+	border-radius: 5px;
+	position: relative;
+	background-color: $white;
+
+	transition: all 0.5s ease;
+}
+
+/* === NAVBAR: MENU ITEM === */
 .navbar-container-wrapper {
 	width: 100%;
 
@@ -20,6 +53,11 @@
 
 	border-radius: 10px;
 	width: 90%;
+	height: 80px;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .navbar-content {
@@ -30,4 +68,51 @@
 		width: 40px;
 		margin-right: 10px;
 	}
+}
+
+.navbar-dropdown {
+	position: relative;
+}
+
+.navbar-dropdown-content {
+	background-color: $comp-background2;
+	filter: drop-shadow(5px 10px 10px rgba(0, 0, 0, 0.25));
+
+	padding: 20px;
+	border-radius: 10px;
+
+	position: absolute;
+	z-index: 9999;
+	right: 0;
+
+	display: flex;
+	flex-direction: column;
+	// align-items: center;
+
+	> .button {
+		padding: 0px;
+		font-weight: 400;
+
+		display: flex;
+		align-items: center;
+
+		i {
+			transition: color 0.3s ease;
+			margin-right: 10px;
+		}
+
+		&:hover i,
+		&:focus-visible i {
+			outline: none;
+			color: rgba($white, 0.5);
+		}
+	}
+}
+
+.navbar-dropdown-border {
+	height: 2px;
+	width: 100%;
+
+	margin: 5px 0;
+	background-color: rgba($white, 0.5);
 }
