feat: add navbar (#143)
* feat(Button): add text style

* feat: add navbar

* feat: add menu button

* feat(Navbar): add navbar content

* feat(Navbar): add dropdown animation

* feat(Button): add onClick listener for links

* feat(Navbar): add logout function

--- a/src/styles/components/buttons.scss
+++ b/src/styles/components/buttons.scss
@@ -7,6 +7,8 @@
 
 	border: none;
 	border-radius: 10px;
+
+	cursor: pointer;
 }
 
 .button.button-black {
@@ -17,5 +19,15 @@
 	&:focus-visible {
 		outline: none;
 		background-color: $button-black-active;
+	}
+}
+
+.button.button-text {
+	transition: color 0.3s ease;
+
+	&:hover,
+	&:focus-visible {
+		outline: none;
+		color: rgba($white, 0.5);
 	}
 }
