--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,7 +8,10 @@ $red: #f72a2d;
 $blurple: #6666ff;
 
 $comp-background1: #1c1d1e;
+$comp-background2: #18191a;
+
 $page-background: #242526;
+$navbar-background: #1e1f21;
 
 $button-black: #1c1d1e;
 $button-black-active: #131415;
@@ -126,4 +129,5 @@ a {
 @import "./pages/home.scss";
 @import "./pages/login.scss";
 
+@import "./components/navbar.scss";
 @import "./components/buttons.scss";
