feat: add modal stylings

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -129,5 +129,6 @@ a {
 @import "./pages/home.scss";
 @import "./pages/login.scss";
 
+@import "./components/modal.scss";
 @import "./components/navbar.scss";
 @import "./components/buttons.scss";
