--- a/src/styles/components/modal.scss
+++ b/src/styles/components/modal.scss
@@ -26,7 +26,7 @@
 	align-items: center;
 
 	background-color: $comp-background1;
-	border: 1px solid $white;
+	border: 1px solid rgba($white, 0.5);
 	border-radius: 15px;
 }
 
