--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -116,3 +116,173 @@
 	margin: 5px 0;
 	background-color: rgba($white, 0.5);
 }
+
+/* === NAVBAR: UPLOAD MODAL === */
+.upload-modal-content {
+	padding: 20px 0;
+	width: 100%;
+}
+
+.upload-modal-top {
+	width: 100%;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+
+	> .button {
+		padding: 0px;
+		font-weight: 400;
+
+		display: flex;
+		align-items: center;
+
+		i {
+			transition: color 0.3s ease;
+			margin-right: 10px;
+		}
+
+		&:hover i,
+		&:focus-visible i {
+			outline: none;
+			color: rgba($white, 0.5);
+		}
+	}
+}
+
+.upload-modal-title {
+	font-weight: 500;
+	font-size: 40px;
+}
+
+.upload-modal-dropzone {
+	width: 100%;
+	height: 250px;
+
+	margin-top: 20px;
+
+	border: 2px dashed rgba($white, 0.5);
+	border-radius: 5px;
+
+	display: grid;
+	place-items: center;
+}
+
+.upload-modal-dropzone-content {
+	display: grid;
+	place-items: center;
+
+	> i {
+		font-size: 75px;
+	}
+
+	> p {
+		margin-top: 15px;
+		font-size: 25px;
+
+		text-align: center;
+	}
+}
+
+.upload-modal-upload {
+	overflow-y: auto;
+
+	&::-webkit-scrollbar {
+		width: 10px;
+	}
+
+	/* Track */
+	&::-webkit-scrollbar-track {
+		background: #323436;
+	}
+
+	/* Handle */
+	&::-webkit-scrollbar-thumb {
+		background: $button-blurple;
+	}
+
+	/* Handle on hover */
+	&::-webkit-scrollbar-thumb:hover {
+		background: $button-blurple-active;
+	}
+}
+
+.upload-modal-dropzone {
+	width: calc(100% - 10px);
+}
+
+.upload-modal-uploaded-list {
+	padding-right: 10px;
+}
+
+.upload-modal-uploaded-list {
+	margin-top: 1rem;
+
+	.upload-modal-uploaded-file:not(:first-child) {
+		margin-top: 10px;
+	}
+}
+
+.upload-modal-uploaded-file,
+.uploaded-modal-uploaded-file-details,
+.uploaded-modal-uploaded-file-title {
+	width: 100%;
+
+	display: flex;
+	align-items: center;
+}
+
+.upload-modal-uploaded-file {
+	padding: 5px 10px;
+
+	border-radius: 5px;
+	background-color: #323436;
+
+	> i {
+		font-size: 45px;
+		margin-right: 20px;
+
+		color: $blurple;
+	}
+
+	> p {
+		font-size: 20px;
+		text-align: center;
+
+		> i {
+			font-size: 30px;
+			color: $blurple;
+		}
+	}
+}
+
+.uploaded-modal-uploaded-file-details {
+	flex-direction: column;
+	align-items: unset;
+}
+
+.uploaded-modal-uploaded-file-title {
+	font-size: 20px;
+
+	p#state {
+		margin-left: 5px;
+	}
+}
+
+.upload-modal-progressbar {
+	width: calc(100% - 20px);
+	height: 7.5px;
+
+	margin: 7.5px 0;
+	border-radius: 5px;
+
+	background-color: $comp-background1;
+
+	> div {
+		max-width: 100%;
+		height: 100%;
+
+		border-radius: 5px;
+		background-color: $blurple;
+	}
+}
