--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -259,6 +259,13 @@
 		color: $blurple;
 	}
 
+	> .button i {
+		font-size: 30px;
+		margin-right: 20px;
+
+		color: $blurple;
+	}
+
 	> p {
 		font-size: 20px;
 		text-align: center;
