--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -128,6 +128,7 @@ a {
 
 @import "./pages/home.scss";
 @import "./pages/login.scss";
+@import "./pages/dashboard.scss";
 
 @import "./components/modal.scss";
 @import "./components/navbar.scss";
