--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,20 +27,31 @@ $modal-backdrop: rgba(#000, 0.75);
 	margin: 0;
 	color: $white;
 	box-sizing: border-box;
+
+	&::-webkit-scrollbar {
+		width: 10px;
+	}
+
+	/* Track */
+	&::-webkit-scrollbar-track {
+		background: #323436;
+	}
+
+	/* Handle */
+	&::-webkit-scrollbar-thumb {
+		background: $button-black;
+	}
+
+	/* Handle on hover */
+	&::-webkit-scrollbar-thumb:hover {
+		background: $button-black-active;
+	}
 }
 
 body {
 	background: $page-background;
 	min-height: 100vh;
-
-	/* hide scroll bar */
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
-
-	/* Hide scrollbar for Chrome, Safari and Opera */
-	&::-webkit-scrollbar {
-		display: none;
-	}
+	overflow-x: hidden;
 }
 
 input {
