--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,9 @@ $navbar-background: #1e1f21;
 $button-black: #1c1d1e;
 $button-black-active: #131415;
 
+$button-grey: #525457;
+$button-grey-active: #323436;
+
 $button-blurple: $blurple;
 $button-blurple-active: #333366;
 
@@ -56,7 +59,7 @@ body {
 
 input {
 	background: $comp-background1;
-	border: 1px solid $white;
+	border: 1px solid rgba($white, 0.5);
 	border-radius: 5px;
 
 	transition: border 0.5s ease;
