--- a/src/styles/pages/dashboard.scss
+++ b/src/styles/pages/dashboard.scss
@@ -67,3 +67,55 @@
 	object-fit: cover;
 	border-radius: 5px;
 }
+
+.dashboard-table-navigation {
+	width: 100%;
+	margin: 10px 0px 20px 0px;
+
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.dashboard-table-dropdown {
+	width: 150px;
+	margin: 0px 10px;
+
+	&.big {
+		width: 200px;
+	}
+}
+
+.dashboard-table-page-select {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+@media screen and (max-width: 970px) {
+	.dashboard-table-navigation,
+	.dashboard-table-page-select {
+		flex-direction: column;
+	}
+
+	.dashboard-table-search,
+	.dashboard-table-page-select,
+	.dashboard-table-dropdown,
+	.dashboard-table-search input,
+	.dashboard-table-page-select button {
+		width: 100% !important;
+	}
+
+	.dashboard-table-search,
+	.dashboard-table-page-select,
+	.dashboard-table-dropdown,
+	.dashboard-table-page-select button {
+		margin-bottom: 10px;
+	}
+
+	.dashboard-table-page-select {
+		button:last-child {
+			margin-bottom: 0px;
+		}
+	}
+}
