--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 
 /* --vars-- */
 $white: #fff;
-$red: #f72a2d;
+$red: #e54b4b;
 $blurple: #6666ff;
 
 $comp-background1: #1c1d1e;
@@ -21,6 +21,15 @@ $button-grey-active: #323436;
 
 $button-blurple: $blurple;
 $button-blurple-active: #333366;
+
+$button-danger: $red;
+$button-danger-active: #e62e2e;
+
+$button-success: #2bc016;
+$button-success-active: #1f990f;
+
+$button-yellow: #f5bb00;
+$button-yellow-active: #d1a000;
 
 $modal-backdrop: rgba(#000, 0.75);
 
