feat: update input background colour

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,7 +67,7 @@ body {
 }
 
 input {
-	background: $comp-background1;
+	background: #14161a;
 	border: 1px solid rgba($white, 0.5);
 	border-radius: 5px;
 
