feat(FileList): add support for visibility setting

--- a/src/styles/pages/dashboard.scss
+++ b/src/styles/pages/dashboard.scss
@@ -189,3 +189,12 @@
 		align-items: center;
 	}
 }
+
+.dashboard-table-visibility {
+	display: flex;
+	align-items: center;
+
+	i:first-child {
+		margin-right: 10px;
+	}
+}
