--- a/src/styles/pages/dashboard.scss
+++ b/src/styles/pages/dashboard.scss
@@ -7,6 +7,8 @@
 
 	overflow: hidden;
 	background-color: $comp-background2;
+
+	margin-bottom: 1rem;
 }
 
 .dashboard-table-container {
@@ -103,7 +105,7 @@
 		text-align: center;
 	}
 
-	input {
+	input[type="checkbox"] {
 		filter: invert(100%) hue-rotate(18deg) brightness(1.7);
 
 		&:checked {
