--- a/src/styles/components/navbar.scss
+++ b/src/styles/components/navbar.scss
@@ -34,7 +34,7 @@
 .navbar-container-wrapper {
 	width: 100%;
 
-	top: 30px;
+	top: 20px;
 	left: 50%;
 	transform: translateX(-50%);
 
@@ -67,6 +67,10 @@
 	> img {
 		width: 40px;
 		margin-right: 10px;
+	}
+
+	> a {
+		font-size: 25px;
 	}
 }
 
@@ -186,24 +190,10 @@
 
 .upload-modal-upload {
 	overflow-y: auto;
+	height: 500px;
 
-	&::-webkit-scrollbar {
-		width: 10px;
-	}
-
-	/* Track */
-	&::-webkit-scrollbar-track {
-		background: #323436;
-	}
-
-	/* Handle */
 	&::-webkit-scrollbar-thumb {
-		background: $button-blurple;
-	}
-
-	/* Handle on hover */
-	&::-webkit-scrollbar-thumb:hover {
-		background: $button-blurple-active;
+		background-color: $blurple;
 	}
 }
 
