--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,7 +4,7 @@
 
 /* --vars-- */
 $white: #fff;
-$red: #f72a2d;
+$red: #e54b4b;
 $blurple: #6666ff;
 
 $comp-background1: #1c1d1e;
@@ -16,8 +16,20 @@ $navbar-background: #1e1f21;
 $button-black: #1c1d1e;
 $button-black-active: #131415;
 
+$button-grey: #525457;
+$button-grey-active: #323436;
+
 $button-blurple: $blurple;
 $button-blurple-active: #333366;
+
+$button-danger: $red;
+$button-danger-active: #e62e2e;
+
+$button-success: #2bc016;
+$button-success-active: #1f990f;
+
+$button-yellow: #f5bb00;
+$button-yellow-active: #d1a000;
 
 $modal-backdrop: rgba(#000, 0.75);
 
@@ -27,25 +39,36 @@ $modal-backdrop: rgba(#000, 0.75);
 	margin: 0;
 	color: $white;
 	box-sizing: border-box;
+
+	&::-webkit-scrollbar {
+		width: 10px;
+	}
+
+	/* Track */
+	&::-webkit-scrollbar-track {
+		background: #323436;
+	}
+
+	/* Handle */
+	&::-webkit-scrollbar-thumb {
+		background: $button-black;
+	}
+
+	/* Handle on hover */
+	&::-webkit-scrollbar-thumb:hover {
+		background: $button-black-active;
+	}
 }
 
 body {
 	background: $page-background;
 	min-height: 100vh;
-
-	/* hide scroll bar */
-	-ms-overflow-style: none; /* IE and Edge */
-	scrollbar-width: none; /* Firefox */
-
-	/* Hide scrollbar for Chrome, Safari and Opera */
-	&::-webkit-scrollbar {
-		display: none;
-	}
+	overflow-x: hidden;
 }
 
 input {
-	background: $comp-background1;
-	border: 1px solid $white;
+	background: #14161a;
+	border: 1px solid rgba($white, 0.5);
 	border-radius: 5px;
 
 	transition: border 0.5s ease;
@@ -128,6 +151,7 @@ a {
 
 @import "./pages/home.scss";
 @import "./pages/login.scss";
+@import "./pages/dashboard.scss";
 
 @import "./components/modal.scss";
 @import "./components/navbar.scss";
