--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -66,7 +66,8 @@ body {
 	overflow-x: hidden;
 }
 
-input {
+input,
+textarea {
 	background: #14161a;
 	border: 1px solid rgba($white, 0.5);
 	border-radius: 5px;
@@ -79,6 +80,8 @@ input {
 		border: 1px solid $blurple;
 		outline: none;
 	}
+
+	resize: vertical;
 }
 
 a {
@@ -152,6 +155,7 @@ a {
 @import "./pages/home.scss";
 @import "./pages/login.scss";
 @import "./pages/dashboard.scss";
+@import "./pages/settings.scss";
 
 @import "./components/modal.scss";
 @import "./components/navbar.scss";
