--- a/src/styles/pages/settings.scss
+++ b/src/styles/pages/settings.scss
@@ -85,6 +85,11 @@
 	padding: 1rem 1.5rem;
 	border-radius: 7px;
 
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
 	form:first-child {
 		margin-bottom: 1rem;
 	}
