--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -12,3 +12,38 @@ a {
 	@apply hover:text-blue-600;
 	@apply transition-colors;
 }
+
+html {
+	scrollbar-face-color: #3d3d3d;
+	scrollbar-base-color: #3d3d3d;
+	scrollbar-3dlight-color: #3d3d3d;
+	scrollbar-highlight-color: #3d3d3d;
+	scrollbar-track-color: rgb(27, 27, 27);
+	scrollbar-arrow-color: rgb(27, 27, 27);
+	scrollbar-shadow-color: #3d3d3d;
+	scrollbar-dark-shadow-color: #3d3d3d;
+}
+
+::-webkit-scrollbar {
+	width: 8px;
+	height: 3px;
+}
+::-webkit-scrollbar-button {
+	background-color: #2b2b2b;
+}
+::-webkit-scrollbar-track {
+	background-color: #3d3d3d;
+}
+::-webkit-scrollbar-track-piece {
+	background-color: rgb(27, 27, 27);
+}
+::-webkit-scrollbar-thumb {
+	height: 50px;
+	background-color: #3d3d3d;
+}
+::-webkit-scrollbar-corner {
+	background-color: #3d3d3d;
+}
+::-webkit-resizer {
+	background-color: #3d3d3d;
+}
