fix: a tags with blue highlight and button style

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -7,7 +7,7 @@ html {
 	@apply bg-bg-dark;
 }
 
-a {
+.react_markdown-components a {
 	@apply text-blue;
 	@apply hover:text-blue-600;
 	@apply transition-colors;
