--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 html {
 	@apply text-white;
 	@apply bg-bg-dark;
@@ -21,7 +17,6 @@ html {
 	scrollbar-track-color: rgb(27, 27, 27);
 	scrollbar-arrow-color: rgb(27, 27, 27);
 	scrollbar-shadow-color: #3d3d3d;
-	scrollbar-dark-shadow-color: #3d3d3d;
 }
 
 ::-webkit-scrollbar {
@@ -47,3 +42,7 @@ html {
 ::-webkit-resizer {
 	background-color: #3d3d3d;
 }
+
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
