--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -1,12 +1,22 @@
-html {
-	@apply text-white;
-	@apply bg-bg-dark;
+@config "../../tailwind.config.cjs";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+	html {
+		@apply text-white;
+		@apply bg-bg-dark;
+	}
 }
 
-.react_markdown-components a {
-	@apply text-blue;
-	@apply hover:text-blue-600;
-	@apply transition-colors;
+@layer components {
+	.react_markdown-components a {
+		@apply text-blue;
+		@apply hover:text-blue-600;
+		@apply transition-colors;
+	}
 }
 
 html {
@@ -42,7 +52,3 @@ html {
 ::-webkit-resizer {
 	background-color: #3d3d3d;
 }
-
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
